# netCDF_utilities

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  style.yapf
example/: README.md  example_groups_nc_config.toml  example_nc_config.toml  example_nc_config_packed.toml  example_nc_config_timeUnlimited.json  example_ncgen_script.py
netCDF_utilities/: __init__.py  ncdump.py  ncgen.py
netCDF_utilities/utils/: hdfeos_attrs.py  nctyping.py
test/: example_nc_config.json  example_nc_config_timeUnlimited.toml  example_ncgen_script.py  test_ncgen.py
