[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netCDF_utilities"
dynamic = ["version"]
description = 'Utilities to use with the Unidata netCDF4 module'
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = 'Chris Slocum', email = 'Christopher.Slocum@colostate.edu'}
]
dependencies = [
  "toml",
  "numpy",
  "netCDF4",
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/CSlocumWX/netCDF_utilities"

[tool.setuptools.dynamic]
version = {attr = "netCDF_utilities.__version__"}
