[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netCDF_utilities"
dynamic = ["version"]
description = 'Utilities to use with the Unidata netCDF4 module'
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = 'Chris Slocum', email = 'Christopher.Slocum@colostate.edu'}
]
dependencies = [
  "toml",
  "numpy",
  "netCDF4",
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/CSlocumWX/netCDF_utilities"

[tool.setuptools.dynamic]
version = {attr = "netCDF_utilities.__version__"}

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort.import-heading]
future = "Future imports"
standard-library = "Standard library imports"
third-party = "Third party imports"
first-party = "First party imports"
local-folder = "Local folder imports"
